# cpplex

./: CMakeLists.txt
include/cpplex/: constraint.h  matrix.h
include/pilal/: divisionbyzeroexception.h  indexoutofboundexception.h  matrix.cc  matrix.h  matrixissingularexception.h  matrixnotsquareexception.h  notavectorexception.h  sizemismatchexception.h
simplex/include/: simplex.h
src/: conicalhull.cc  solver-eigen.cc
